@@ -73,6 +73,9 @@ public class WriteController {
   
   
   private void writeSelectorLoop() {
+    int rounds = 0;    
+    long start = System.currentTimeMillis();
+    
     while( true ) {
       try {
         write_selector.select( 100 );
@@ -80,6 +83,20 @@ public class WriteController {
       catch( Throwable t ) {
         Debug.out( "writeSelectorLoop() EXCEPTION: ", t );
       }
+      
+      rounds++;
+      
+      if( rounds > 1000 ) {
+        long time = System.currentTimeMillis() - start;
+        
+        if( time < 3000 ) {
+          Debug.out( "writeSelectorLoop() spin detected, time=" +time );
+          try {  Thread.sleep( 1000 );  }catch(Exception e) { Debug.printStackTrace(e); }
+        }
+        rounds = 0;
+        start = System.currentTimeMillis();
+      }
+      
     }
   }
   
