@@ -1604,5 +1604,6 @@ dht.override.ip=Override external IP address
 
 ConfigView.section.logging.loggerenable=Enable logging
 
-
+ConfigView.section.connection.faulty_selector_mode=Enable faulty network selector compatibility mode [restart required]
+ConfigView.section.connection.faulty_selector_mode.tooltip=For those experiencing 100% cpu usage when connected to >60 total peer connections.
 #PLEASE LEAVE ME AT VERY BOTTOM!
